--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,6 @@ DB_CONNECTION ='mongodb+srv://Mind:Mind_2025@cluster1.iqnnoud.mongodb.net/feedba
 EMAIL_PASS="wjty bbwd rteh tpqc"
 EMAIL_USER="feedbacker001@gmail.com"
 JWT_KEY='Isha@123'
+CLOUD_NAME="dnd9qzxws"
+CLOUD_API_KEY="329715835858945"
+CLOUD_API_SECRET="tVCE09fiEML-B-Z9GjwF32tjvWE"
