--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.5.1",
     "url": "^0.11.4",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
